# ocean-model-interfaces

./: .gitignore  CMakeLists.txt  README.md
gtest/: CMakeLists.txt
ocean_model_interfaces/: CMakeLists.txt  Config.cmake.in
ocean_model_interfaces/cmake/modules/: FindNetCDFCxx.cmake
ocean_model_interfaces/doc/: CMakeLists.txt  Doxyfile.in  mainpage.md
ocean_model_interfaces/include/ocean_model_interfaces/fvcom/: FVCOM.h  FVCOMChunk.h  FVCOMStructure.h
ocean_model_interfaces/include/ocean_model_interfaces/general_models/: ConstantModel.h  LinearModel.h  OceanFrontModel.h
ocean_model_interfaces/include/ocean_model_interfaces/geodetic_grid/: GeodeticGrid.h  GeodeticGridChunk.h  GeodeticGridParameters.h  GeodeticGridStructure.h
ocean_model_interfaces/include/ocean_model_interfaces/model_interface/: ModelData.h  ModelInterface.h
ocean_model_interfaces/include/ocean_model_interfaces/util/: LRUCache.h  MultiDimensionalVector.h  Plane.h  Point.h  UtilityFunctions.h
ocean_model_interfaces/python_bindings/: CMakeLists.txt
ocean_model_interfaces/python_bindings/examples/: call_fvcom.py
ocean_model_interfaces/python_bindings/include/ocean_model_interfaces_py/: GeodeticGridParametersPyInterface.h  ModelDataPyInterface.h
ocean_model_interfaces/python_bindings/python/: setup.py
ocean_model_interfaces/python_bindings/python/ocean_model_interfaces/: FVCOM.py  GeodeticGrid.py  ModelInterface.py  __init__.py
ocean_model_interfaces/python_bindings/src/: FVCOMPyInterface.cpp  GeodeticGridPyInterface.cpp  ModelInterfacePyInterface.cpp
ocean_model_interfaces/src/fvcom/: FVCOM.cpp  FVCOMChunk.cpp  FVCOMStructure.cpp
ocean_model_interfaces/src/general_models/: ConstantModel.cpp  LinearModel.cpp  OceanFrontModel.cpp
ocean_model_interfaces/src/geodetic_grid/: GeodeticGrid.cpp  GeodeticGridChunk.cpp  GeodeticGridStructure.cpp
ocean_model_interfaces/src/model_interface/: ModelInterface.cpp
ocean_model_interfaces/src/util/: MultiDimensionalVector.cpp  Plane.cpp  Point.cpp  UtilityFunctions.cpp
ocean_model_interfaces/test/: CMakeLists.txt  FVCOMChunk_test.cpp  FVCOMStructure_test.cpp  FVCOM_test.cpp  GeodeticGridChunk_test.cpp  GeodeticGridStructure_test.cpp  GeodeticGrid_test.cpp  OceanFrontModel_test.cpp  UtilityFunctions_test.cpp  lru_cache_test.cpp
ocean_model_interfaces/test_data/axial_data_test/: axial_0001_0.nc
ocean_model_interfaces/test_data/geodetic_grid_test/: geodetic_grid_test0.nc  geodetic_grid_test1.nc
ocean_models/: CMakeLists.txt  Config.cmake.in
ocean_models/doc/: CMakeLists.txt  Doxyfile.in
ocean_models/include/ocean_models/fvcom/: FVCOM.h  FVCOMChunk.h  FVCOMStructure.h  LRUCache.h
ocean_models/include/ocean_models/general_models/: ConstantModel.h  LinearModel.h  OceanFrontModel.h
ocean_models/include/ocean_models/model_interface/: ModelData.h  ModelInterface.h
ocean_models/notes/: fvcom_format.txt
ocean_models/src/fvcom/: FVCOM.cpp  FVCOMChunk.cpp  FVCOMStructure.cpp
ocean_models/src/general_models/: ConstantModel.cpp  LinearModel.cpp  OceanFrontModel.cpp
ocean_models/src/model_interface/: ModelInterface.cpp
ocean_models/test/: CMakeLists.txt  FVCOMChunk_test.cpp  FVCOMStructure_test.cpp  FVCOM_test.cpp  OceanFrontModel_test.cpp  lru_cache_test.cpp
scripts/: geodetic_grid_plotting_example.ipynb  roms_model_regularization.py
src/: CMakeLists.txt
src/gtest/: CMakeLists.txt
src/ocean_models/: CMakeLists.txt
src/ocean_models/cmake/modules/: FindNetCDFCxx.cmake
src/ocean_models/fvcom/: CMakeLists.txt  package.xml
src/ocean_models/general_models/: CMakeLists.txt  package.xml
src/ocean_models/include/fvcom/: FVCOM.h  FVCOMChunk.h  FVCOMStructure.h  LRUCache.h
src/ocean_models/include/general_models/: ConstantModel.h  LinearModel.h
src/ocean_models/include/model_interface/: ModelData.h  ModelInterface.h
src/ocean_models/include/ocean_models/fvcom/: FVCOM.h  FVCOMChunk.h  FVCOMStructure.h  LRUCache.h
src/ocean_models/include/ocean_models/model_interface/: ModelData.h  ModelInterface.h
src/ocean_models/src/fvcom/: FVCOM.cpp  FVCOMChunk.cpp  FVCOMStructure.cpp  modify_fvcom.py
src/ocean_models/src/general_models/: ConstantModel.cpp  LinearModel.cpp
src/ocean_models/src/model_interface/: ModelInterface.cpp
src/ocean_models/test/: FVCOMChunk_test.cpp  FVCOMStructure_test.cpp  FVCOM_test.cpp  lru_cache_test.cpp
src/ocean_models/test_data/axial_data_test/: axial_0001_1.nc
src/ocean_models/test_data/box_plume_split/: box_plume_0001_0.nc  box_plume_0001_1.nc
